# onnxruntime_vendor

./: CMakeLists.txt  onnxruntime-build.cmake  onnxruntime-extras.cmake.in  onnxruntime-prebuilt.cmake  package.xml
.github/workflows/: build.yaml
