<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onnxruntime_vendor</name>
  <version>1.23.2</version>
  <description>onnxruntime vendor package</description>
  <maintainer email="f0reach@f0reach.me">f0reachARR</maintainer>
  <license>MIT</license>

  <build_depend>libgmock-dev</build_depend>
  <build_depend>libgtest-dev</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
